# qwed-legal

./: .snyk  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  action.yml  action_entrypoint.py  demo_legal.py  pyproject.toml  sonar-project.properties
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  snyk.yml  sonar.yml
npm/: README.md  package-lock.json  package.json  tsconfig.json
npm/src/: index.ts
qwed_legal/: __init__.py  models.py
qwed_legal/guards/: __init__.py  citation_guard.py  clause_guard.py  contradiction_guard.py  deadline_guard.py  fairness_guard.py  irac_guard.py  jurisdiction_guard.py  liability_guard.py  provenance_guard.py  statute_guard.py
qwed_legal/rag/: __init__.py  sac_processor.py
tests/: test_citation_guard.py  test_deadline_fail_closed.py  test_fail_closed_guards.py  test_fairness_guard.py  test_guards.py  test_irac_guard.py  test_provenance_guard.py  test_sac_processor.py  test_statute_fail_closed.py  test_trace_serialization.py  test_verification_trace.py
